Fixed article card align items

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -307,6 +307,7 @@ main {
   row-gap: 10px;
   column-gap: 50px;
   align-items: flex-start;
+  align-items: center;
 }
 
 .article-structure {
